fix: fixing header center alignment

--- a/frontend-apps/14/css/styles.css
+++ b/frontend-apps/14/css/styles.css
@@ -58,6 +58,8 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 
 /* ====================== Navigation ====================== */
 nav {
+  display: flex;
+  align-content: center;
   width: 100%;
   height: 80px;
   background-color: #252831;
